# thermpinch

./: PyPinch.py  Readme.md  generatecss.bat  pinch_analysis_data.csv  pyproject.toml
thermpinch/: MANIFEST.in  prompt.py  requirements.txt  run.py  tailwind.config.js  usage.py
thermpinch/pages/: ta-hcas.py  ta-page-demo.py  ta-page2.py  ta-ptable.py  ta-start.py  ta-tecd.py
thermpinch/project/: __init__.py  page1.py  start.py
thermpinch/schemas/: meta.py
thermpinch/thermpinch/: app.py
thermpinch/thermpinch/assets/: agility.css
thermpinch/thermpinch/config/: main.py  project_default.json
thermpinch/thermpinch/pages/: ta-data.py  ta-gcc.py  ta-pinchet.py  ta-report.py  ta-stec.py  ta-tid.py
thermpinch/thermpinch/project/: page2.py  report.py
thermpinch/thermpinch/schemas/: __init__.py  page1.py  page2.py
thermpinch/thermpinch/tailwind/: styles.css
