[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermpinch"
version = "0.1.0"
description = "efelbwb"
authors = [
    {name = "sony", email = "your_email@example.com"}
]
license = {file = "LICENSE"}
readme = "README.md"

dependencies = [
        "agility @git+https://github.com/sandeeprah/agility.git@main",
        "flask",
        "dash",
        "dash-ag-grid",
        "pandas",
        "pydantic"
        
]